		CRLF fix for save file reading on LF-only systems.
		Fix Valgrind hit in fst.c that was causing crashes on OSX.
		Added fstWriterSetFiletype() and fstReaderGetFiletype()
		to provide sim language hint to gtkwave for language-
		appropriate formatting of various data.
		Added fstWriterSetSourceStem() so writers can embed source
		stems in the FST file.  Specify before the appropriate
		hierarchy or variable declaration.
		Added gtkwave_bin_launcher.sh script to set up environment
		variables on OSX for running the bin/ directory files from
		a terminal rather than as an app invocation.
3.3.51	27oct13	MAINTAINERS: Please add gedit to the list of dependencies
		for gtkwave in order to enable new function that Icarus
		Verilog dumps into FST files.
		Fix "/File/Grab To File" on OSX with an OSX patch as the 
		_gdk_quartz_image_copy_to_image() function in the GTK 
		toolkit for Quartz is broken.
		Updated examples/gtkwaverc accel options to reflect the
		current state of the gtkwave main window main menu.
		Added "Open Source Definition" and "Open Source Instantiation"
		options that invoke .gtkwaverc variable "editor" (or 
		$GTKWAVE_EDITOR or gedit or open -t [OSX]) on sourcecode when
		source stems are present in the dumpfile (currently FST only).
		Fixed timezero in vcd2fst as it was only parsing unsigned
		numbers.
		Fixed Open Hierarchy crash on blank signals.
3.3.52	06nov13	Changed left/right arrow function in signal/wave windows to
		find next transition of selected signal(s).
		Re-enabled DnD scroll beyond top/bottom of Signals pane.
		Another partial VCD loader fix.
		Now use libcomdlg32 file requesters on MinGW.
		Added --extensions flag to fstvcd to enable emission of
		FST extensions/attributes to VCD files.  This is to keep FST
		attributes from making VCD files unparseable with other tools.
		Fix in FsdbReader interface for version 1.x files.
		Added debounce for baseline (middle) mouse button.
		Many warnings fixes found from gcc -Wextra flag.